<?xml version="1.0"?>
<package format="2">
  <name>ls2d</name>
  <version>0.1.0</version>
  <description>LS2D ros description: connect and stream.</description>
  <maintainer email="ishevtsov0108@gmail.com">Ivan Shevtsov</maintainer>
  <license>Apache License, Version 2.0</license>
  <url type="website">https://github.com/I1sh/RTC_PRAK</url>
  <author email="ishevtsov0108@gmail.com">Ivan Shevtsov</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>

  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <build_depend>roslint</build_depend>
  <build_depend>roslaunch</build_depend>
</package>
