<?xml version="1.0"?>
<package format="2">
  <name>ls2d</name>
  <version>0.1.0</version>
  <description>LS2D ros description: connect and stream.</description>
  <maintainer email="ishevtsov0108@gmail.com">Ivan Shevtsov</maintainer>
  <license>Apache License, Version 2.0</license>
  <url type="website">https://github.com/I1sh/RTC_PRAK</url>
  <author email="ishevtsov0108@gmail.com">Ivan Shevtsov</author>

  <!-- buildtool_depend: dependencies of the build process -->
  
  <!-- build_depend: dependencies only used in source files -->

  <!-- depend: build, export, and execution dependency -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>